<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/imageLoadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:id="@+id/captchaImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/captcha_image_description"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/inputCaptchaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/captcha_input_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/captchaVerifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/captcha_verify_button" />

    <TextView
        android:id="@+id/validCaptchaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/captchaDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
